# Particle-Physics-Sim

./: .gitignore  Cargo.toml  README.md  frame.fbs  index.html  index.js  schema.fbs  schema_generated.rs
src/: client.rs  lib.rs  main.rs  settings.rs  setup.rs  state.rs  wgpu_config.rs  wgpu_prog.rs  wgpu_structs.rs  windowInit.rs  window_init.rs
src/shaders/: .wgsl  2D_Collision_Pointers.wgsl  2D_Collisions.wgsl  2D_Forces.wgsl  2D_LOM.wgsl  2D_Particle_Forces.wgsl  2D_Render.wgsl  2D_Render_2.wgsl  2D_Render_3.wgsl  2D_Render_4.wgsl  2D_Simulation.wgsl  Click.wgsl  Drop.wgsl  Fix.wgsl  Release.wgsl  Selectangle.wgsl  Set_Properties.wgsl  Track.wgsl  Translate.wgsl  cube_shader.wgsl  gol_shader1.wgsl  shader copy.wgsl  shader.wgsl
src/shaders/OLD/: 2D_Particle_Forces.wgsl  OLD_Collisions.wgsl
