[package]
name = "WGPU"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[build]
target_arch = "wasm32"

[cfg]

target_arch = "wasm32"
# RUSTFLAGS = "--cfg=web_sys_unstable_apis"

[target.'cfg(target_arch = "wasm32")']
rustflags = [  "-C", "link-arg=-s",  "-C", "link-arg=--no-entry",  "-C", "link-arg=--export-table",  "-C", "link-arg=--import-memory",  "-C", "link-arg=--allow-undefined"]#"--cfg=web_sys_unstable_apis",

[dependencies]
imgui = "0.11.0"
imgui-wgpu = "0.24.0"
imgui-winit-support = "0.11.0"
cfg-if = "1"
winit = "0.28.3"
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.16.1"
pollster = "0.3"
async-std = { version = "1.12", features = ["attributes", "tokio1"] }
rand = "0.8.5"
winit-fullscreen = "1.0.1"
chrono = "0.4.24"
cgmath = "0.18"
getrandom = { version = "0.2.9", features = ["js"] }
bytemuck = { version = "1.12", features = [ "derive" ] }
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.16.1", features = []}
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Element",
    "Window",
]}